Theme: Change body line-height to fix alignment issue (#56442)
* Theme: Change body line-height to fix alignment issue

* Updates

--- a/public/sass/_variables.generated.scss
+++ b/public/sass/_variables.generated.scss
@@ -112,7 +112,7 @@ $font-size-md: 14px !default;
 $font-size-sm: 12px !default;
 $font-size-xs: 10px !default;
 
-$line-height-base: 1.5 !default;
+$line-height-base: 1.5714285714285714 !default;
 
 $font-weight-regular: 400 !default;
 $font-weight-semi-bold: 500 !default;
